# transformer-playground

./: .gitignore  README.md  phrases.txt  pyproject.toml
configs/: default.py
src/transformer_playground/: __init__.py  cli.py  config.py  data.py  infer.py  plotting.py  report.py  tracking.py  train.py
src/transformer_playground/model/: __init__.py  attention.py  block.py  decoder_lm.py  embeddings.py
src/transformer_playground/tokenizers/: __init__.py  base.py  sentencepiece_bpe.py
tests/: test_auto_artifacts.py  test_config.py  test_data.py  test_early_stopping.py  test_generate_eos_stop.py  test_infer_compare.py  test_model_shapes.py  test_plotting.py  test_report.py  test_train_smoke.py
